# caps_metadatabase

./: .gitignore  01_schema.sql  02_views.sql  03_procedures.sql  04_seed_data.sql  05_insert_data.sql  ER.mwb  LittleLemon_data.csv  check.sql  main.py  procedure.ipynb  pyproject.toml
